--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": "^8.0.2",
-        "illuminate/support": "^9.0"
+        "illuminate/support": "^9.0 || ^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0",
