--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         }
     ],
     "require": {
-        "php": "^8.0.2",
-        "illuminate/support": "^9.0 || ^10.0",
-        "spatie/laravel-data": "^3.12"
+        "php": "^8.1.0",
+        "illuminate/support": "^10.0",
+        "spatie/laravel-data": "^4.17"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0",
+        "orchestra/testbench": "^8.0",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
